src/styles/global.css
@import "reset.css";

body {
  font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  padding: 0 16px;
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

main {
  flex-grow: 1;
}

header, main, footer {
  max-width: 640px;
  width: 100%;
  margin: 0 auto;
}

figcaption p {
  margin: 0;
}

p, ul, ol, pre {
  margin: 1em 0;
}

h1, h2, h3, h4, h5, h6 {
  margin: .5em 0;
}

